k8s/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: hello
  namespace: default
spec:
  containers:
  - name: hello
    image: nginx:1.17
    command: ["sh", "-c", "echo Hello World && sleep 30"]
